bug fix: 80vh container height causing clipping, now 90

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,7 +8,7 @@ body {
 }
 .container {
     width: 80vw;
-    height:80vh;
+    height:90vh;
     margin: 5em;
     overflow: hidden
     }
